<resources>
    <string name="app_name">ArchersNav</string>
    <string name="logo_desc">Description of the logo</string>
    <string name="top_image_desc">Description of the top image</string>
    <string name="spinner_icon_desc">Role Icon</string>
    <string name="select_role">Select Role</string>
    <string name="campus_map_desc">Campus Map</string>
    <string name="emergency_desc">Emergency</string>
    <string name="saved_desc">Saved</string>
    <string name="profile_desc">Profile</string>
    <string-array name="roles_array">
        <item>Student</item>
        <item>Professor</item>
    </string-array>
    <string name="profile_username">test username</string>
    <string name="profile_email">test@example.com</string>
    <string name="preferences">Preferences</string>
    <string name="push_notifications">Push notifications</string>
    <string name="change_password">Change Password</string>
    <string name="change_username">Change Username</string>
    <string name="logout">Logout</string>
    <string name="profile_title">PROFILE</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username_label">Username</string>
    <string name="username_hint">Enter your username</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="save_changes">Save Changes</string>
    <string name="bloemen_hall_desc">Bloemen Hall</string>
    <string name="br_andrew_desc">Br. Andrew</string>
    <string name="br_joseph_desc">Br. Joseph</string>
    <string name="connon_hall_desc">Connon Hall</string>
    <string name="la_salle_desc">La Salle</string>
    <string name="mutien_marie_desc">Mutien Marie</string>
    <string name="razon_desc">Razon</string>
    <string name="st_miguel_desc">St. Miguel</string>
    <string name="strc_desc">STRC</string>
    <string name="velasco_desc">Velasco</string>
    <string name="william_hall_desc">William Hall</string>
    <string name="henry_sy_desc">DLSU Henry Sy Sr. Hall</string>
    <string name="br_john_desc">Br. John Hall</string>
    <string name="yuchengco_desc">Yuchengco</string>
    <string name="bloemen_hall">Br. Bloemen Hall</string>
    <string name="br_andrew">Br. Andrew Gonzales Halls</string>
    <string name="br_joseph">Br. Joseph Hall</string>
    <string name="connon_hall">Br. Connon Hall</string>
    <string name="la_salle">St. La Salle Hall</string>
    <string name="mutien_marie">St. Mutien Marie Hall</string>
    <string name="razon">Enrique M. Razon Sports Center</string>
    <string name="st_miguel">St. Miguel Hall</string>
    <string name="strc">Science and Technology Research Center</string>
    <string name="velasco">Velasco Hall</string>
    <string name="william_hall">William Hall</string>
    <string name="henry_sy">DLSU Henry Sy Sr. Hall</string>
    <string name="br_john">Br. John Hall</string>
    <string name="yuchengco">Don Enrique T. Yuchengco Hall</string>
    <string name="gokongwei">Gokongwei Hall</string>
    <string name="add_contact">Add Contact</string>
    <string name="emergency_navigation">Emergency Navigation</string>
    <string name="help_support">Help and Support</string>
    <string name="evacuation_plan_desc">Evacuation Plan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_campus_map">Campus Map</string>
    <string name="title_emergency">Emergency</string>
    <string name="title_locations">Locations</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="henry_sy_details">Henry Sy Sr. Hall, also known as “Henry” among students, is a 14-story building located in the middle of the campus, and is situated in between two historical buildings, the St. La Salle Hall and the Velasco Hall. The HSSH was built on the concept of a “habitable tree,” illustrating the University\'s growing role in education and its commitment to environmental sustainability. The construction of the building began in 2010 as part of the University\'s Centennial Renewal Plan, and it has been considered as the “Most Prominent Project”. The building, and its grounds, which is known as the Corazon Aquino Democratic Space or CADS, were formally inaugurated in February 2012.</string>
    <string name="st_joseph_hall_details">The St. Joseph Hall which is commonly called as “SJ” is a six-story structure home to the College of Science. It features classrooms and laboratories, and it formerly served as the university\'s main library.</string>
    <string name="st_miguel_hall_details">The St. Miguel Hall, completed in 1969, contains academic departments and engineering laboratories. Originally called St. Benilde Hall, it was renamed in honor of St. Michael.</string>
    <string name="velasco_hall_details">It is a five-story building constructed in 1981 and houses the College of Engineering. It includes specialized laboratories and classrooms for engineering students. It also caters to students taking GE subjects.</string>
    <string name="br_john_hall_details">One of the “isolated” buildings on campus. It is located right beside South Gate, near McDonald\'s. The building is named after Br. Celba John, FSC.</string>
    <string name="st_la_salle_hall_details">The St. La Salle Hall (LS) is the oldest building on campus, completed in 1924 and designed by Tomás Mapúa. This neoclassical, H-shaped structure is known for its white façade along Taft Avenue and serves as De La Salle University\'s most historic building. The four-story hall houses classrooms, offices, and key areas like The Most Blessed Sacrament Chapel on the second floor and the Lasallian Brothers\' residence on the fourth. The ground floor features Perico\'s cafeteria and Gate 1. Retrofitted between 2010-2012 for disaster resilience, the building hosts the College of Business and the School of Economics.</string>
    <string name="br_connon_hall_details">The Br. Gabriel Connon Hall, named after former DLSU President Br. Hyacinth Gabriel Connon, FSC, is a 5-story building that houses various student services and administrative offices. These include the University Clinic, the Office for Counseling and Career Services (OCCS), and the Office of Student Affairs. The building also provides spaces for student organizations, including the University Student Government, the Council of Student Organizations, student media groups, and the University\'s performing arts groups. On the ground floor, the Waldo Perfecto Seminar Room is also located.</string>
    <string name="yuchengco_hall_details">Don Enrique T. Yuchengco Hall, commonly called “Yuch,” was completed in 2002 and originally named the Central Administration Building. Students here are mixed but mostly shared by RVR-COB, SOE, and CLA. This was built with support from Ambassador Alfonso Yuchengco in honor of his father. The building houses the University\'s central administrative offices. It features an art gallery on the second floor and a state-of-the-art auditorium on the third. Described by Br. Rolando Dizon FSC as the “nerve center” of the University, it serves as a hub for university activities, including theater and teleconference rooms.</string>
    <string name="gokongwei_hall_details">The Gokongwei Hall commonly called “Goks” is home to the College of Computer Studies and features technology-focused facilities. It underwent major renovations in recent years to modernize its interiors.</string>
    <string name="br_andrew_hall_details">Completed in 2006, Br. Andrew Gonzales Hall is a 20-story building that serves the College of Education. It is the tallest academic building in the Philippines.</string>
    <string name="enrique_razon_hall_details">Built in 1998, this multi-purpose sports facility includes an Olympic-sized pool, track and field oval, table tennis tables, and various courts.</string>
    <string name="science_technology_research_center_details">A facility dedicated to advanced research, housing laboratories and supporting projects from the Colleges of Science and Engineering.</string>
    <string name="bloemen_hall_details">Named after Br. Alphonse Bloemen, FSC, this building serves as the University\'s student center. It houses the University\'s student entrepreneurship area known as the Animo Business Innovation Zone, or Animo BIZ, where student kiosks could be found. The building also features food and drink stalls, making it a spot for students to grab a bite or drink, much like a cafeteria.</string>
    <string name="fire_emergency">Fire Emergency</string>
</resources>