<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#CBE7CC"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp"
        android:text="FACILITY FINDER"
        android:textColor="#00841D"
        android:layout_marginStart="30dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:background="@drawable/search_box_border">

        <EditText
            android:id="@+id/search_facility"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:hint="Search for a facility"
            android:padding="10dp"
            android:textSize="16sp"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:background="@android:color/white"
            android:textColor="#000000"
            android:textColorHint="#969696" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="Search button"
            android:scaleType="centerCrop"
            android:src="@drawable/search_icon" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
            android:padding="16dp"
            android:alignmentMode="alignBounds"
            android:rowCount="6"
            android:columnOrderPreserved="false">

            <!-- Bloemen Hall -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/bloemen_hall_desc"
                    android:src="@drawable/bloemen_hall"
                    android:scaleType="centerCrop"
                    android:onClick="onFacilityClick" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bloemen_hall"
                    android:gravity="center"
                    android:textColor="#00841D" />
            </LinearLayout>

            <!-- Br. Andrew -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/br_andrew_desc"
                    android:src="@drawable/br_andrew"
                    android:scaleType="centerCrop"
                    android:onClick="onFacilityClick" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/br_andrew"
                    android:gravity="center"
                    android:textColor="#00841D" />
            </LinearLayout>

            <!-- Br. Joseph -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/br_joseph_desc"
                    android:src="@drawable/br_joseph"
                    android:scaleType="centerCrop"
                    android:onClick="onFacilityClick" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/br_joseph"
                    android:gravity="center"
                    android:textColor="#00841D" />
            </LinearLayout>

            <!-- Connon Hall -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/connon_hall_desc"
                    android:src="@drawable/connon_hall"
                    android:scaleType="centerCrop"
                    android:onClick="onFacilityClick" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connon_hall"
                    android:gravity="center"
                    android:textColor="#00841D" />
            </LinearLayout>

            <!-- La Salle -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/la_salle_desc"
                    android:src="@drawable/la_salle"
                    android:scaleType="centerCrop"
                    android:onClick="onFacilityClick" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/la_salle"
                    android:gravity="center"
                    android:textColor="#00841D" />
            </LinearLayout>

            <!-- DLSU Henry Sy Sr. Hall -->

            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/henry_sy_desc"
                    android:src="@drawable/henry_sy"
                    android:scaleType="centerCrop"
                    android:onClick="onFacilityClick" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/henry_sy"
                    android:textColor="#00841D" />
            </LinearLayout>

            <!-- Br. John Hall -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/br_john_desc"
                    android:src="@drawable/br_john"
                    android:scaleType="centerCrop"
                    android:onClick="onFacilityClick" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/br_john"
                    android:gravity="center"
                    android:textColor="#00841D" />
            </LinearLayout>

            <!-- Mutien Marie -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/mutien_marie_desc"
                    android:src="@drawable/mutien_marie"
                    android:scaleType="centerCrop"
                    android:onClick="onFacilityClick" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mutien_marie"
                    android:gravity="center"
                    android:textColor="#00841D" />
            </LinearLayout>

            <!-- Razon -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/razon_desc"
                    android:src="@drawable/razon"
                    android:scaleType="centerCrop"
                    android:onClick="onFacilityClick" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:text="@string/razon"
                    android:textColor="#00841D" />
            </LinearLayout>

            <!-- St. Miguel -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/st_miguel_desc"
                    android:src="@drawable/st_miguel"
                    android:scaleType="centerCrop"
                    android:onClick="onFacilityClick" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/st_miguel"
                    android:gravity="center"
                    android:textColor="#00841D" />
            </LinearLayout>

            <!-- STRC -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/strc_desc"
                    android:src="@drawable/strc"
                    android:scaleType="centerCrop"
                    android:onClick="onFacilityClick" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:gravity="center"
                    android:text="@string/strc"
                    android:textColor="#00841D" />
            </LinearLayout>

            <!-- Velasco -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/velasco_desc"
                    android:src="@drawable/velasco"
                    android:scaleType="centerCrop"
                    android:onClick="onFacilityClick" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/velasco"
                    android:gravity="center"
                    android:textColor="#00841D" />
            </LinearLayout>

            <!-- William Hall -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">
                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/william_hall_desc"
                    android:src="@drawable/william_hall"
                    android:scaleType="centerCrop"
                    android:onClick="onFacilityClick" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/william_hall"
                    android:gravity="center"
                    android:textColor="#00841D" />
            </LinearLayout>

            <!-- Yuchengco -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp">

                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="151dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/yuchengco_desc"
                    android:onClick="onFacilityClick"
                    android:scaleType="centerCrop"
                    android:src="@drawable/yuchengco" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:gravity="center"
                    android:text="@string/yuchengco"
                    android:textColor="#00841D" />
            </LinearLayout>

        </GridLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00370C"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/iv_campus_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/campus_map_desc"
            android:src="@drawable/campus_icon" />

        <ImageButton
            android:id="@+id/iv_emergency"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/emergency_desc"
            android:src="@drawable/emergency_icon" />

        <ImageButton
            android:id="@+id/iv_saved"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/saved_desc"
            android:src="@drawable/saved_icon" />

        <ImageButton
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/profile_icon"
            android:contentDescription="@string/profile_desc" />
    </LinearLayout>

</LinearLayout>